Change to styles to fix error on safari when flipping cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -130,7 +130,7 @@ section {
   grid-template-columns: repeat(4, 8rem);
   grid-template-rows: repeat(4, 8rem);
   grid-gap: 2rem;
-  perspective: 500px;
+  perspective: 600px;
 }
 /*Styles on cards*/
 /*Code for flipping cards from developedbyEd see readme*/
